--- a/media/css/firefox/facebook-container.scss
+++ b/media/css/firefox/facebook-container.scss
@@ -39,11 +39,11 @@ $color-photon-blue: #0099db;
 // Top hero section
 
 .intro {
+    @include open-sans;
     background: #3b5998;
 
     .title {
         @include font-size-level3;
-        @include open-sans;
         line-height: 1.35;
         font-weight: bold;
         color: #fff;
@@ -52,7 +52,6 @@ $color-photon-blue: #0099db;
 
     .tagline {
         @include font-size-level4;
-        @include open-sans;
         color: #fff;
         margin-bottom: 1em;
     }
@@ -77,7 +76,6 @@ $color-photon-blue: #0099db;
         margin-top: 40px;
 
         a {
-            @include open-sans;
             color: #fff;
             font-weight: bold;
         }
@@ -95,6 +93,11 @@ $color-photon-blue: #0099db;
             background-color: darken(#fb5d1c, 5%);
             border-color: darken(#fb5d1c, 7%);
         }
+    }
+
+    .mobile-cta p {
+        @include font-size-level4;
+        margin-bottom: 20px;
     }
 
     @media #{$mq-desktop} {
@@ -116,7 +119,10 @@ $color-photon-blue: #0099db;
 }
 
 // Hide extension CTA for non-Firefox
-.extension-cta {
+// Hide mobile CTA and tagline for non-mobile
+.extension-cta,
+.mobile-cta,
+.tagline-mobile {
     display: none;
 }
 
@@ -134,6 +140,31 @@ $color-photon-blue: #0099db;
     }
 }
 
+.ios,
+.android {
+    .firefox-cta,
+    .extension-cta,
+    .secondary-download,
+    .tagline-download,
+    .tagline-extension {
+        display: none;
+    }
+
+    .tagline-mobile,
+    .mobile-cta {
+        display: block;
+    }
+}
+
+.mobile-download-buttons {
+    .ios & .android {
+        display: none;
+    }
+
+    .android & .ios {
+        display: none;
+    }
+}
 
 .optional-cta {
     margin-top: 40px;
