--- a/bedrock/mozorg/templates/mozorg/developer/index.html
+++ b/bedrock/mozorg/templates/mozorg/developer/index.html
@@ -95,7 +95,7 @@
 
         <div class="card">
           <a class="card-image" href="https://developer.mozilla.org/docs/Tools" data-link-type="link" data-link-position="Developer resources" data-link-name="Firefox DevTools">
-            {{ lazy_img(image_url='mozorg/developer/hub/resource-devtools.jpg', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+            {{ lazy_img(image_url='mozorg/developer/hub/resource-devtools.jpg', placeholder_url=lazy_image_placeholder) }}
             <h3 class="card-title">{{ _('Firefox DevTools') }}</h3>
           </a>
 
@@ -110,7 +110,7 @@
 
         <div class="card">
           <a class="card-image" href="https://research.mozilla.org/webassembly/?utm_source=www.mozilla.org&amp;utm_medium=referral&amp;utm_campaign=developer-hub" data-link-type="link" data-link-position="Developer resources" data-link-name="WebAssembly">
-            {{ lazy_img(image_url='mozorg/developer/hub/resource-webassembly.png', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+            {{ lazy_img(image_url='mozorg/developer/hub/resource-webassembly.png', placeholder_url=lazy_image_placeholder) }}
             <h3 class="card-title">{{ _('WebAssembly') }}</h3>
           </a>
 
@@ -125,7 +125,7 @@
 
         <div class="card">
           <a class="card-image" href="https://medium.com/mozilla-tech/keep-the-web-open-with-cross-browser-testing-e3006662a042" data-link-type="link" data-link-position="Developer resources" data-link-name="Cross-browser testing">
-            {{ lazy_img(image_url='mozorg/developer/hub/resource-webcompat.png', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+            {{ lazy_img(image_url='mozorg/developer/hub/resource-webcompat.png', placeholder_url=lazy_image_placeholder) }}
             <h3 class="card-title">{{ _('Cross-browser testing') }}</h3>
           </a>
 
@@ -181,7 +181,7 @@
         <div class="card card-double">
           <div class="card-image">
             <a href="{{ url('mozorg.developer.css-grid-demo') }}" data-link-type="link" data-link-position="Projects" data-link-name="CSS Grid Layouts">
-              {{ lazy_img(image_url='mozorg/developer/hub/project-cssgrid.png', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+              {{ lazy_img(image_url='mozorg/developer/hub/project-cssgrid.png', placeholder_url=lazy_image_placeholder) }}
               <h3 class="card-title">{{ _('CSS Grid Layouts') }}</h3>
             </a>
           </div>
@@ -200,7 +200,7 @@
         <div class="card">
           <div class="card-image">
             <a href="https://wiki.mozilla.org/Quantum" data-link-type="link" data-link-position="Projects" data-link-name="Project Quantum">
-              {{ lazy_img(image_url='mozorg/developer/hub/project-quantum.jpg', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+              {{ lazy_img(image_url='mozorg/developer/hub/project-quantum.jpg', placeholder_url=lazy_image_placeholder) }}
               <h3 class="card-title">{{ _('Project Quantum') }}</h3>
             </a>
           </div>
@@ -219,7 +219,7 @@
         <div class="card">
           <div class="card-image">
             <a href="https://www.rust-lang.org/" data-link-type="link" data-link-position="Projects" data-link-name="Rust">
-              {{ lazy_img(image_url='mozorg/developer/hub/project-rust.jpg', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+              {{ lazy_img(image_url='mozorg/developer/hub/project-rust.jpg', placeholder_url=lazy_image_placeholder) }}
               <h3 class="card-title">{{ _('Rust') }}</h3>
             </a>
           </div>
@@ -238,7 +238,7 @@
         <div class="card">
           <div class="card-image">
             <a href="https://developer.mozilla.org/docs/Games?utm_source=www.mozilla.org&amp;utm_medium=referral&amp;utm_campaign=developer-hub" data-link-type="link" data-link-position="Projects" data-link-name="Game Development">
-              {{ lazy_img(image_url='mozorg/developer/hub/project-gamedev.jpg', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+              {{ lazy_img(image_url='mozorg/developer/hub/project-gamedev.jpg', placeholder_url=lazy_image_placeholder) }}
               <h3 class="card-title">{{ _('Game Development') }}</h3>
             </a>
           </div>
@@ -257,7 +257,7 @@
         <div class="card">
           <div class="card-image">
             <a href="https://aframe.io" data-link-type="link" data-link-position="Projects" data-link-name="A-Frame for WebVR">
-              {{ lazy_img(image_url='mozorg/developer/hub/project-aframe.png', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+              {{ lazy_img(image_url='mozorg/developer/hub/project-aframe.png', placeholder_url=lazy_image_placeholder) }}
               <h3 class="card-title">{{ _('A-Frame for WebVR') }}</h3>
             </a>
           </div>
@@ -286,7 +286,7 @@
         <div class="card card-double">
           <a class="card-image video-play" href="https://youtu.be/16enLRDbOyY" data-link-type="link" data-link-position="Videos to watch" data-link-name="Announcing CSS Grid and the Firefox Grid Inspector tool">
             <div class="video-thumbnail">
-              {{ lazy_img(image_url='mozorg/developer/hub/video-gridinspector.jpg', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+              {{ lazy_img(image_url='mozorg/developer/hub/video-gridinspector.jpg', placeholder_url=lazy_image_placeholder) }}
               <svg class="play-button"><use xlink:href="#video-play-button"></use></svg>
             </div>
             <h3 class="card-title">{{ _('Announcing CSS Grid and the Firefox Grid Inspector tool') }}</h3>
@@ -299,7 +299,7 @@
         <div class="card">
           <a class="card-image video-play" href="https://youtu.be/MaJCfdmr9Wg" data-link-type="link" data-link-position="Videos to watch" data-link-name="WebAssembly: A game changer">
             <div class="video-thumbnail">
-              {{ lazy_img(image_url='mozorg/developer/hub/video-webassembly.jpg', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+              {{ lazy_img(image_url='mozorg/developer/hub/video-webassembly.jpg', placeholder_url=lazy_image_placeholder) }}
               <svg class="play-button"><use xlink:href="#video-play-button"></use></svg>
             </div>
             <h3 class="card-title">{{ _('WebAssembly: A game changer') }}</h3>
@@ -312,7 +312,7 @@
         <div class="card">
           <a class="card-image video-play" href="https://youtu.be/8EPsnf_ZYU0" data-link-type="link" data-link-position="Videos to watch" data-link-name="Rust and the future of systems programming">
             <div class="video-thumbnail">
-              {{ lazy_img(image_url='mozorg/developer/hub/video-rust.jpg', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+              {{ lazy_img(image_url='mozorg/developer/hub/video-rust.jpg', placeholder_url=lazy_image_placeholder) }}
               <svg class="play-button"><use xlink:href="#video-play-button"></use></svg>
             </div>
             <h3 class="card-title">{{ _('Rust and the future of systems programming') }}</h3>
@@ -325,7 +325,7 @@
         <div class="card">
           <a class="card-image video-play" href="https://youtu.be/TT7ugKuUMv0" data-link-type="link" data-link-position="Videos to watch" data-link-name="WebGL 2 demo">
             <div class="video-thumbnail">
-              {{ lazy_img(image_url='mozorg/developer/hub/video-webgldemo.jpg', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+              {{ lazy_img(image_url='mozorg/developer/hub/video-webgldemo.jpg', placeholder_url=lazy_image_placeholder) }}
               <svg class="play-button"><use xlink:href="#video-play-button"></use></svg>
             </div>
             <h3 class="card-title">{{ _('WebGL 2 demo') }}</h3>
@@ -338,7 +338,7 @@
         <div class="card">
           <a class="card-image video-play" href="https://youtu.be/QK4hKWmJVLo" data-link-type="link" data-link-position="Videos to watch" data-link-name="Firefox Developer Tools: debugger overview">
             <div class="video-thumbnail">
-              {{ lazy_img(image_url='mozorg/developer/hub/video-debugger.jpg', placeholder_url=lazy_image_placeholder, optional_attributes={'alt': ''}) }}
+              {{ lazy_img(image_url='mozorg/developer/hub/video-debugger.jpg', placeholder_url=lazy_image_placeholder) }}
               <svg class="play-button"><use xlink:href="#video-play-button"></use></svg>
             </div>
             <h3 class="card-title">{{ _('Firefox Developer Tools: debugger overview') }}</h3>
