--- a/media/css/pebbles/components/_card.scss
+++ b/media/css/pebbles/components/_card.scss
@@ -156,14 +156,15 @@
     }
 
     .card-block-link {
-        border: 2px solid #e7e7e7;
-        border-radius: 4px;
+        @include transition(box-shadow 150ms ease-in-out);
+        border-radius: 3px;
+        box-shadow: 0 0 0 2px #e7e7e7;
 
         &:hover,
         &:active,
         &:focus {
             background-color: #fff;
-            border: 2px solid darken(#e7e7e7, 10%);
+            box-shadow: 0 0 0 4px darken(#e7e7e7, 10%);
 
             .card-content {
                 background-color: #fff;
@@ -181,7 +182,6 @@
 
 .card.card-tile-light {
     background: transparent;
-    border-radius: 2px;
 
     .card-content {
         padding: 15px;
@@ -197,16 +197,17 @@
     }
 
     .card-block-link {
+        @include transition(box-shadow 150ms ease-in-out);
         background: #fff;
-        border: 2px solid #e7e7e7;
-        box-shadow: inset 0 -1px 0 0 #e7e7e7;
+        border-radius: 2px;
+        box-shadow: 0 0 0 2px #e7e7e7;
         height: 100%;
 
         &:hover,
         &:active,
         &:focus {
             background-color: #fff;
-            border: 2px solid darken(#e7e7e7, 10%);
+            box-shadow: 0 0 0 4px darken(#e7e7e7, 10%);
 
             .card-content {
                 background-color: #fff;
