Review/copy/image update:
- Added tests
- Added alt text for logo
- Updated copy
- Updated logo
- Make links open in new window

--- a/bedrock/firefox/templates/firefox/new/berlin/base.html
+++ b/bedrock/firefox/templates/firefox/new/berlin/base.html
@@ -9,7 +9,7 @@
 
 {% block page_title_prefix %}{% endblock %}
 {% block page_title %}{{_('Firefox – Dein Browser für Desktop, Smartphone und Tablet')}}{% endblock %}
-{% block page_desc %}{{_('Besser digital leben mit Firefox: Superschnell surfen, Top-Privatsphäre-Schutz und gut für das Internet. Weil Mozilla dahinter steht. Das Non-Profit für ein freies und offenes Internet für alle Menschen.')}}{% endblock %}
+{% block page_desc %}{{_('Besser digital leben mit Firefox: Superschnell surfen, Top-Privatsphäre-Schutz und gut für das Netz. Weil Mozilla dahinter steht. Das Non-Profit für ein freies und offenes Internet – für alle Menschen.')}}{% endblock %}
 
 {% block page_css %}
   {% stylesheet 'firefox_new_berlin' %}
@@ -21,13 +21,13 @@
 {% block site_header %}{% endblock %}
 
 {% block content %}
-  <main role="main">
+<main role="main">
   <section class="intro content-section">
     <div class="content">
       <div class="copy">
-        <img class="logo" src="{{ static('img/firefox/new/berlin/firefox-logo-wordmark.png') }}" width="408" height="103" alt="" />
+        <img class="logo" src="{{ static('img/firefox/new/berlin/firefox-logo-wordmark.png') }}" width="408" height="103" alt="Dein Browser mit Herz" />
         {% block head_content %}
-          <h1 id="main-heading">Dein Browser <br/>Mit HERZ.</h1>
+          <h1 id="main-heading">Dein Browser <br/>mit Herz.</h1>
         {% endblock %}
         <div class="secondary-content">
           {% block secondary_content %}{% endblock %}
@@ -42,31 +42,34 @@
     <div class="content">
       <ul>
         <li>
-          <h3>Bist Du bereit?</h3>
+          <h3>Gut für Dich</h3>
           <p>
             Offline achtest Du auf Dich, Deine Ernährung, die Umwelt … Doch
             online lassen wir uns von Werbung verfolgen, geben leichtfertig
-            <a href="{{ url('firefox.features.private-browsing') }}">unsere Privatsphäre</a>
-            auf oder sind sogar Produkt. Passt das für Dich auch nicht so
-            richtig zusammen? Dann bring doch online und offline einfach in Einklang.
+            <a rel="noopener" target="_blank" href="{{ url('firefox.features.private-browsing') }}">unsere Privatsphäre</a>
+            auf oder sind sogar Produkt. Passt das für Dich nicht so richtig
+            zusammen? Dann bring doch Dein Online- und Offline-Leben wieder
+            in Einklang – mit Firefox.
           </p>
         </li>
         <li>
-          <h3>Gut für Dich</h3>
+          <h3>Gut für Deine Daten</h3>
           <p>
-            Wir finden: Deine Daten gehören Dir. Daher ist der Privatsphäre-Schutz
-            von Firefox so viel stärker als bei anderen Browsern. Surfen in
-            Top-Geschwindigkeit natürlich inklusive. Übrigens: Browser wechseln war
-            <a href="https://www.youtube.com/watch?v=29wLOEYM5QE" rel="external noreferrer noopener">noch nie so einfach</a>.
+            Wir finden: Deine Daten gehören Dir. Daher ist der
+            Privatsphäre-Schutz von Firefox so viel stärker als bei anderen
+            Browsern. Surfen in Top-Geschwindigkeit natürlich inklusive. Übrigens:
+            <a rel="noopener noreferrer" target="_blank" href="https://blog.mozilla.org/firefox/de/superschnell-und-einfach-der-wechsel-von-chrome-zu-firefox/">Browser wechseln</a>
+            war noch nie so einfach.
           </p>
         </li>
         <li>
           <h3>Gut für das Internet</h3>
           <p>
-            Firefox ist unabhängig und Teil von Mozilla. Das Non-Profit für ein
-            freies Internet für alle Menschen. Und nicht für nur einige Tech-Riesen.
-            Deswegen machen wir uns stark. Seit es uns gibt. Für Deine Privatsphäre
-            und ein <a href="{{ url('firefox.features.independent') }}">Internet für Menschen statt für Profit</a>.
+            <a rel="noopener" target="_blank" href="{{ url('firefox.features.independent') }}">Internet für Menschen statt für Profit</a>:
+            Firefox ist unabhängig und Teil von Mozilla. Als Non-Profit kämpfen
+            wir für ein freies Netz. Von dem alle Menschen profitieren. Und
+            nicht nur ein paar Tech-Riesen. Dafür machen wir uns stark. Seit es
+            uns gibt.
           </p>
         </li>
       </ul>
@@ -78,7 +81,7 @@
   <section class="secondary-download content-section">
     <div class="content">
       <div class="download-contain">
-        <h2>Besser digital leben – mit Firefox.</h2>
+        <h2>Besser digital leben &mdash; mit Firefox.</h2>
         <div class="download-button-wrapper">
           {{ download_firefox(alt_copy='Jetzt herunterladen', locale_in_transition=true, dom_id="download-firefox-today", button_color='button-orange') }}
         </div>
